--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
-TELEGRAM_BOT_TOKEN = 7749786995:AAGr9rk_uuykLLp5g7Hi3XwIlsdMfW9pWFw
+TELEGRAM_BOT_TOKEN=7749786995:AAGr9rk_uuykLLp5g7Hi3XwIlsdMfW9pWFw
+PORT=10000
+PYTHON_VERSION=3.11.9
+ADMIN_ID=1190237801
+RENDER_DEPLOYMENT=true
+DATABASE_URL=postgres://user:password@host:5432/dbname
+API_ID=29177661
+API_HASH=a8639172fa8d35dbfd8ea46286d349ab
 WEBHOOK_URL = https://votre-app.onrender.com
