--- a/render.yaml
+++ b/render.yaml
@@ -1,23 +1,20 @@
-
 services:
   - type: web
     name: telegram-bot-webhook
     env: python
     region: oregon
     plan: free
-    buildCommand: pip install --upgrade pip && pip install -r render_requirements.txt
+    buildCommand: pip install -r render_requirements.txt
     startCommand: python3 render_webhook_bot.py
     envVars:
       - key: TELEGRAM_BOT_TOKEN
         sync: false
       - key: WEBHOOK_URL
-        value: https://telegram-bot-webhook.onrender.com
-      - key: PORT
-        value: "10000"
+        sync: false
       - key: PYTHON_VERSION
         value: "3.11.9"
-      - key: FLASK_ENV
-        value: "production"
     healthCheckPath: /health
-    autoDeploy: false
-    numInstances: 1
+    disk:
+      name: data
+      mountPath: /opt/render/project/src
+      sizeGB: 1
